Checkpoint: Complete Secret Sips app with: AI Drink Mixer (Blue Ocean), Barista Mode, Price Calculator, Image/URL extraction, community voting, favorites, token economy, Stripe billing, 5 accessibility modes, admin panel, customer support, glassmorphism design, full SEO, /docs folder, 17 passing tests

--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,60 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Secret Sips</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5" />
+    <title>Secret Sips — Starbucks Secret Menu Drinks & Custom Recipes</title>
+    <meta name="description" content="Discover, create, and share Starbucks secret menu drinks. AI-powered drink customizer, barista ordering guides, price calculator, and community-voted recipes." />
+    <meta name="keywords" content="Starbucks secret menu, secret menu drinks, custom Starbucks drinks, hidden menu recipes, Starbucks hacks" />
+    <meta name="author" content="Secret Sips" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://secretsips.manus.space/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Secret Sips — Starbucks Secret Menu Drinks" />
+    <meta property="og:description" content="THE go-to platform for Starbucks secret menu drinks. AI drink customizer, barista mode, price calculator, and 500+ community recipes." />
+    <meta property="og:url" content="https://secretsips.manus.space/" />
+    <meta property="og:site_name" content="Secret Sips" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Secret Sips — Starbucks Secret Menu Drinks" />
+    <meta name="twitter:description" content="Discover hidden Starbucks drinks. AI-powered customizer creates your perfect secret menu order." />
+
+    <meta name="theme-color" content="#7c3aed" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Secret Sips",
+      "description": "Discover, create, and share Starbucks secret menu drinks with AI-powered customization.",
+      "url": "https://secretsips.manus.space/",
+      "applicationCategory": "FoodApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      defer
-      src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
+    <script defer src="%VITE_ANALYTICS_ENDPOINT%/umami" data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
   </body>
-
 </html>
